<resources>
    <string name="app_name">Ebuild</string>
    <string name="title_activity_maps">Ebuild</string>
    <string name="title_activity_maps_user">Ebuild</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="next">Adicionar</string>
    <string name="del_marker">Mostra endereço</string>
    <string name="commit">Commit</string>
    <string name="Buscaend">Busca por endereço</string>
    <string name="sat">Satélite</string>
    <string name="norm">Normal</string>
    <string name="hibrid">Híbrido</string>
    <string name="data">Data de início da obra:</string>
    <string name="find">Buscar</string>
    <string name="rua">Digite a rua:</string>
    <string name="bairro">Digite o bairro:</string>
    <string name="cidade">Digite a cidade:</string>
    <string name="cancelar">Cancelar</string>
    <string name="badd">Adicionar</string>
    <string name="bcancel">Cancelar</string>
    <string name="remove">Remover</string>
    <string name="nomeObra">Nome da Obra:</string>
    <string name="form">Formulário</string>
    <string name="interno">Interna</string>
    <string name="externo">Externa</string>
    <string name="salvar">Salvar</string>
    <string name="listar">Listar</string>
    <string name="cadastro_user">Cadastrar novo usuário</string>
    <string name="editar_user">Editar usuários</string>
    <string name="texto_int_ext">Fases do Processo da Obra:</string>
    <string name="nome">Nome:</string>
    <string name="email">E-Mail:</string>
    <string name="logincadastro">Login:</string>
    <string name="senha">Senha:</string>
    <string name="resenha">Reescreva a Senha:</string>
    <string name="nulo">Null</string>
    <string name="fase">Fase:</string>
    <string name="faseitem">Fase do processo:</string>
    <string name="dialog_cadastro_usuario">Menu usuários</string>
    <string name="editar">Editar</string>
    <string name="texto_int_ext_dialog">Processo da Obra:</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
