<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/box"
    android:weightSum="1"
    android:padding="10dp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout5">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/nome"
                android:id="@+id/textViewnome" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="text"
                android:id="@+id/nome" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/email"
                android:id="@+id/textViewemail" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="text"
                android:id="@+id/email" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/login"
                android:id="@+id/textViewlogin" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="text"
                android:id="@+id/login" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/senha"
                android:id="@+id/textViewsenha" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="textPassword"
                android:id="@+id/senha" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/resenha"
                android:id="@+id/textViewresenha" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="textPassword"
                android:id="@+id/resenha" />

        </LinearLayout>


        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:id="@+id/Bsalvarcadastro" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:id="@+id/Bcancelacadastro" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>