<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/box"
    android:weightSum="1"
    android:background="@drawable/dialog">

    <FrameLayout
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:layout_gravity="right"
        android:clickable="true">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_delete"
            android:id="@+id/buttonX"
            android:clickable="true" />
    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btn_menu_sat"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="true"
            android:enabled="true"
            android:focusable="false"
            android:text="@string/sat"
            android:focusableInTouchMode="true" />

        <Button
            android:id="@+id/btn_menu_norm"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="true"
            android:enabled="true"
            android:focusable="false"
            android:text="@string/norm"
            android:focusableInTouchMode="true" />

        <Button
        android:id="@+id/btn_menu_hibrid"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true"
        android:enabled="true"
        android:focusable="false"
        android:text="@string/hibrid"
        android:focusableInTouchMode="true" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="true"
            android:enabled="true"
            android:focusable="false"
            android:text="@string/login"
            android:focusableInTouchMode="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="Listar Obras"
            android:id="@+id/lista_obras" />
    </LinearLayout>

</LinearLayout>