<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tcc.ebuild.edita_userActivity">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:id="@+id/lista_edita_user"
        android:layout_weight="1"
        android:divider="#7a7a7a"
        android:textColor="@android:color/black"
        android:dividerHeight="2dp"
        android:layout_above="@+id/linearLayout8"
        android:layout_alignParentTop="true"
        android:choiceMode="singleChoice"
        android:listSelector="#dc494949"
        android:background="@drawable/listview" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout8">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar"
            android:id="@+id/Bedita" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:id="@+id/Bremove" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:id="@+id/Bcancela" />

    </LinearLayout>

</RelativeLayout>
