<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/box"
    android:weightSum="1"
    android:background="@drawable/dialog">

    <FrameLayout
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:layout_gravity="right"
        android:clickable="true">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_delete"
            android:id="@+id/buttonX"
            android:clickable="true" />
    </FrameLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/rua"
            android:id="@+id/textViewrua" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="text"
            android:hint="CEP/Rua e número"
            android:editable="true"
            android:id="@+id/rua_num" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/bairro"
            android:id="@+id/textViewbairro" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="text"
            android:hint="bairro"
            android:editable="true"
            android:id="@+id/bairro" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/cidade"
            android:id="@+id/textViewcidade" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="text"
            android:hint="cidade e estado"
            android:editable="true"
            android:id="@+id/cidade" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btn_busca"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="true"
            android:enabled="true"
            android:focusable="false"
            android:text="@string/del_marker"
            android:focusableInTouchMode="true"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>