
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="280dp"
    android:id="@+id/box"
    android:weightSum="1"
    android:orientation="vertical"
    android:background="@drawable/dialog"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="4dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/lista_edita_obra"
                android:layout_weight="1"
                android:divider="#7a7a7a"
                android:textColor="@android:color/black"
                android:dividerHeight="2dp"
                android:layout_above="@+id/linearLayout8"
                android:layout_alignParentTop="true"
                android:choiceMode="singleChoice"
                android:listSelector="#dc494949"
                android:background="@drawable/listview" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout8">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editar"
                android:id="@+id/Bedita" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                android:id="@+id/Bremove" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:id="@+id/Bcancela" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
